--- a/style.css
+++ b/style.css
@@ -51,9 +51,13 @@
 #Nav-List li {
   list-style: none;
 }
+nav h2{
+ font-size: 2em; 
+}
 nav {
   padding: 2vh;
   justify-content: space-between;
+  align-items: center;
   width: 72.5vw;
   margin: 0px auto 0px auto;
 }
@@ -93,6 +97,15 @@ header img{
     margin: 0px auto 0px auto;
   }
   #Nav-List ul {
+    font-size: 3vw;
     gap: 2vw;
   }
+  .Hero-Heading h1 {
+    /* word-wrap: break-word; */
+  font-size: 2em;
+}
+nav h2{
+  text-align: center;
+ font-size: 4vw; 
+}
 }
